--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.1.7",
     "com.unity.collab-proxy": "2.10.0",
     "com.unity.feature.development": "1.0.2",
     "com.unity.textmeshpro": "3.0.6",
