--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,8 +3,10 @@
     "com.unity.ai.navigation": "1.1.7",
     "com.unity.collab-proxy": "2.10.0",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.probuilder": "5.0.7",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.8.2",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.modules.ai": "1.0.0",
