--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.ai.navigation": "1.1.7",
     "com.unity.collab-proxy": "2.10.0",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.inputsystem": "1.7.0",
     "com.unity.probuilder": "5.0.7",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.8.2",
